--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ header{
     align-items: center;
     padding: 20px;
     background-color: rgb(255, 255, 255);
+    position: sticky;
+    top: 0px;
+    z-index: 10;
 }
 .text a{
     text-decoration: none;
@@ -25,6 +28,7 @@ header{
 nav ul{
     display: flex;
     list-style: none;
+    justify-content: center;
     column-gap: 30px;
     margin: 0px;
     align-items: center;
@@ -44,6 +48,11 @@ li a:hover , .home a{
 .headericon a{
 text-decoration: none;
 color: black;
+transition: all 0.3s ease-out;
+}
+.headericon a:hover{
+    color: #51eaea;
+    transform: scale(1.05);
 }
 .sec1{
     display: flex; 
@@ -64,6 +73,7 @@ color: black;
     letter-spacing: .2em;
     text-transform: uppercase;
     font-weight: bold;
+    text-align: center;
 }
 .head h1{
     text-align: center;
@@ -78,6 +88,8 @@ color: black;
     display: flex;
     justify-content: space-around;
     padding-top: 50px;
+     flex-wrap: wrap; 
+     row-gap: 20px; 
 }
 .card1{
     background-color: #1ad5d5;
@@ -112,7 +124,7 @@ font-weight: 300;
 }
 .sec3{
     padding-top: 150px;
-    padding-bottom: 30px;
+    padding-bottom: 70px;
 }
 .sec3 p{
     font-weight: 650;
@@ -178,6 +190,7 @@ position: relative;
 .bc-img1 img{
     width: 100%;
     height: 100%;
+    border-radius: 6px;
 }
 #text{
     position: absolute;
@@ -192,6 +205,7 @@ position: relative;
 }
 .bc-img2 img{
     width: 100%;
+    border-radius: 6px;
 }
 #text1{
     position: absolute;
@@ -211,6 +225,18 @@ position: relative;
     color: rgba(0, 0, 0, 0.5);
     font-size: 1.2rem;
 }
+.redcard{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+    padding-bottom: 100px;
+}
+.redcard p{
+    color: #000;
+    font-weight: 530;
+}
 .col{
     transform: translateY(0);
     transition: transform 0.4s ease-out;
@@ -219,48 +245,54 @@ position: relative;
     cursor: pointer;
     transform: translateY(-15px)
 }
+footer{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    background-color: #f3f3f3;;
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
 footer a{
     text-decoration: none;
 }
-.foot{
-    font-size: 1.34rem;
-    color: #000;
-    font-weight: 600;
-}
-.foot ,.fot1{
-    display: flex;
-  justify-content: space-around;
-}
-.fot1{
-    padding-top:40px;
-}
-.foot11 div:hover{
-    color: #51eaea;
-}
-.fot1 p{
-    line-height: 1.7;
-    color: #575e6d;
-    font-weight: 500;
-    font-size: 16px;
-}
-.foot11 div{
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-}
-.foot11 , .contactfot{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-}
-.contactfot, .contactfot a{
-    color: #25262a;
-    transition: all 0.3s ease-in-out;
-}
-.contactfot a:hover{
-    color: #51eaea;
+.cont,.quick,.about{
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.092rem;
 }
 footer i{
     color: #51eaea;
+}
+footer a{
+    text-decoration: none;
+    color: black;
+    transition: all 0.3s ease-out;
+}
+footer a:hover{
+   color:  #51eaea;
+   cursor: pointer;
+}
+.fotabout , .footcont, .footlinks{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.fotabout  p{
+    line-height: 1.7;
+    color: #8c92a0;
+}
+.foot11 div{
+    transition: all 0.3s ease-out;
+    line-height: 30px;
+} 
+.foot11 div:hover{
+    color: #51eaea;
+    cursor: pointer;
+} 
+.contactfot{
+  line-height: 34px;
 }
 .lastfot{
     display: flex;
@@ -268,6 +300,7 @@ footer i{
     padding-top: 90px;
     padding-bottom: 50px;
     color: #8c92a0;
+    text-align: center;
 }
 .lastfot i{
     color: #8c92a0;
@@ -275,9 +308,55 @@ footer i{
 .lastfot span{
     color: #51eaea;
     font-weight: 600;
+} 
+.card-title{
+    text-align: center;
 }
-footer{
-    background-color: #ffffff;
-    padding-top: 60px;
-    color: #575e6d;
+@media (max-width:576px) {
+    header{
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+    header .text{
+        font-size: 2rem;
+    }
+    .headericon{
+        display: none;
+    }
+    nav ul li a{
+        font-size: 1.09rem;
+        font-weight: bold;
+    }
+    .dropdown button{
+        font-weight: bold;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+    }
+    .cont,.quick,.about{
+        font-size: 2rem;
+    }
+    .parafot{
+        text-align: center;
+    }
+    .foot11{
+        text-align: center;
+    }
+}
+@media (max-width:390px) {
+    nav ul li a{
+        font-size: 1.3rem;
+    }
+    nav ul{
+        padding: 0px;
+        column-gap: 20px;
+    }
+    .dropdown{
+      display: none;
+    }
 }
