--- a/store.css
+++ b/store.css
@@ -188,9 +188,17 @@ display: none;
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+        position: static;
     }
     header .text{
         font-size: 2rem;
+    }
+    .sec3 h2{
+        font-weight: bold;
+        font-size: 2rem;
+    }
+    .contactfot{
+        text-align: center;
     }
     .headericon{
         display: none;
