--- a/store.css
+++ b/store.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Bowlby+One+SC&family=Cookie&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Gabarito:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Sigmar+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-*{
+
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: "Rubik", serif;
     overflow-x: hidden;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -17,79 +20,97 @@ header{
     top: 0px;
     z-index: 10;
 }
-.text a{
+
+.text a {
     text-decoration: none;
     letter-spacing: .2em;
     font-size: 22px;
     color: #000;
     font-weight: 700;
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
     column-gap: 30px;
     margin: 0px;
     align-items: center;
 }
-li a{
+
+li a {
     text-decoration: none;
     color: black;
 }
-li a:hover , .store a{
+
+li a:hover,
+.store a {
     text-decoration: underline;
     text-decoration-thickness: 2px;
 }
-.headericon{
+
+.headericon {
     display: flex;
-    column-gap:20px;
+    column-gap: 20px;
 }
-.headericon a{
+
+.headericon a {
     text-decoration: none;
     color: black;
     transition: all 0.3s ease-out;
-    }
-    .headericon a:hover{
-        color: #51eaea;
-        transform: scale(1.05);
-    }    
-.sec1{
+}
+
+.headericon a:hover {
+    color: #51eaea;
+    transform: scale(1.05);
+}
+
+.sec1 {
     background-color: #f8f9fa;
     padding-left: 40px;
 }
-nav ul{
-text-decoration: none;
-padding: 20px;
+
+nav ul {
+    text-decoration: none;
+    padding: 20px;
 }
-li a{
-list-style: none;
+
+li a {
+    list-style: none;
 }
-.home1{
+
+.home1 {
     color: #0dc9c9;
     font-size: 1.043rem;
-} 
-.con{    
+}
+
+.con {
     color: #000;
-    font-weight:640;
-} 
-.sec2{
+    font-weight: 640;
+}
+
+.sec2 {
     padding-top: 60px;
 }
-.sec3{
+
+.sec3 {
     background-color: #59e6e7;
     padding-bottom: 60px;
     padding-top: 60px;
 }
-.sec3 h2{
+
+.sec3 h2 {
     color: #000;
     text-transform: uppercase;
     font-weight: 900;
 }
-.sec3 p{
+
+.sec3 p {
     font-weight: 600;
     color: rgba(0, 0, 0, 0.5);
     font-size: 1.2rem;
 }
-.redcard{
+
+.redcard {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -97,63 +118,82 @@ list-style: none;
     row-gap: 20px;
     padding-bottom: 100px;
 }
-.redcard p{
+
+.redcard p {
     color: #000;
     font-weight: 530;
 }
-.col{
+
+.col {
     transform: translateY(0);
     transition: transform 0.4s ease-out;
 }
-.col:hover{
+
+.col:hover {
     cursor: pointer;
     transform: translateY(-15px)
 }
-footer{
+
+footer {
     display: flex;
     justify-content: space-around;
 }
-footer a{
+
+footer a {
     text-decoration: none;
 }
-.cont,.quick,.about{
+
+.cont,
+.quick,
+.about {
     text-align: center;
     font-weight: bold;
     font-size: 1.092rem;
 }
-footer i{
+
+footer i {
     color: #51eaea;
 }
-footer a{
+
+footer a {
     text-decoration: none;
     color: black;
     transition: all 0.3s ease-out;
 }
-footer a:hover{
-   color:  #51eaea;
-   cursor: pointer;
+
+footer a:hover {
+    color: #51eaea;
+    cursor: pointer;
 }
-.fotabout , .footcont, .footlinks{
+
+.fotabout,
+.footcont,
+.footlinks {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
 }
-.fotabout  p{
+
+.fotabout p {
     line-height: 1.7;
     color: #8c92a0;
 }
-.foot11 div{
+
+.foot11 div {
     transition: all 0.3s ease-out;
     line-height: 30px;
-} 
-.foot11 div:hover{
+}
+
+.foot11 div:hover {
     color: #51eaea;
     cursor: pointer;
-} 
-.contactfot{
-  line-height: 34px;
 }
-.lastfot{
+
+.contactfot {
+    line-height: 34px;
+}
+
+.lastfot {
     display: flex;
     justify-content: center;
     padding-top: 90px;
@@ -161,83 +201,106 @@ footer a:hover{
     color: #8c92a0;
     text-align: center;
 }
-.lastfot i{
+
+.lastfot i {
     color: #8c92a0;
 }
-.lastfot span{
+
+.lastfot span {
     color: #51eaea;
     font-weight: 600;
-} 
-footer{
-    background-color: #f3f3f3;;
+}
+
+footer {
+    background-color: #f3f3f3;
+    ;
     padding-top: 60px;
     padding-bottom: 40px;
 }
-section h1{
+
+section h1 {
     padding-top: 40px;
     text-align: center;
     font-family: "Rubik", serif;
 }
+
 @media (max-width:767px) {
-    #imghidenstore{
-display: none;
+    #imghidenstore {
+        display: none;
     }
 }
+
 @media (max-width:576px) {
-    header{
+    header {
         display: flex;
         flex-direction: column;
         row-gap: 20px;
         position: static;
     }
-    header .text{
+
+    header .text {
         font-size: 2rem;
     }
-    .sec3 h2{
+
+    .sec3 h2 {
         font-weight: bold;
         font-size: 2rem;
     }
-    .contactfot{
+
+    .contactfot {
         text-align: center;
     }
-    .headericon{
+
+    .headericon {
         display: none;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 1.09rem;
     }
-    footer{
+
+    footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         row-gap: 20px;
     }
-    .cont,.quick,.about{
+
+    .cont,
+    .quick,
+    .about {
         font-size: 2rem;
     }
-    .parafot{
+
+    .parafot {
         text-align: center;
     }
-    .foot11{
+
+    .foot11 {
         text-align: center;
     }
+
     .sec3 h2 {
         text-align: center;
         font-size: 1.8rem;
     }
 }
+
 @media (max-width:390px) {
-   .sec1{
+    .sec1 {
         padding: 25px;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 1.3rem;
     }
-    nav ul{
+
+    nav ul {
         padding: 0px;
     }
-    .dropdown{
-      display: none;
+
+    .dropdown {
+        display: none;
     }
 }
